--- a/01_dockerfiles/ex01/Dockerfile
+++ b/01_dockerfiles/ex01/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian
 
-ENV TS3SERVER_LICENSE: accept
+ENV TS3SERVER_LICENSE=accept
 
 EXPOSE 9987/udp 10011 30033
 
@@ -12,13 +12,11 @@ RUN apt-get update -y && apt-get upgrade -y && \
 
 RUN wget http://dl.4players.de/ts/releases/3.12.1/teamspeak3-server_linux_amd64-3.12.1.tar.bz2
 
-RUN tar xvf *.tar.bz2 && \
-    mv teamspeak3-server_linux_amd64 /opt/teamspeak && \
-    rm teamspeak3-server_linux_amd64-3.12.1.tar.bz2
+RUN tar xvf *.tar.bz2
 
 WORKDIR teamspeak3-server_linux_amd64
 
-ENTRYPOINT sh ./ts3server_startscript.sh
+ENTRYPOINT sh ts3server_minimal_runscript.sh
 
 
 #sudo docker run --rm -p 9987:9987/udp -p 10011:10011 -p 30033:30033 server
